--- a/components/zup6penze-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/zup6penze-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zup6penze-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-48cda82265.vg0b.p3.openshiftapps.com/rhtap/rhtap-qe:17551f19a45d5bd9018e38a6902ddab5db46a71b@sha256:bc12c1f472ddcaed6ee94f8e92bb7f36d8351dca3fb5b4699cb483807ca50326
+          name: container-image
